fixing issue where search would zoom in on mobile

--- a/themes/ucb/css/ucb.css
+++ b/themes/ucb/css/ucb.css
@@ -670,7 +670,8 @@ hr { margin: 0 0 20px 0; padding: 0; border: none; height: 1px; background: rgba
 #search .cu-search { display: flex; flex-direction: row; }
 #search .cu-search .form-item-search-keys { flex-grow: 1; }
 #search .cu-search .form-item, #search .cu-search .form-actions { margin: 0; }
-#search .cu-search input.form-text { width: 100%; line-height: 40px; height: 40px; padding: 0 8px; background-color: #fff; -webkit-appearance: none; border: none; }
+#search .cu-search input.form-text { width: 100%; line-height: 40px; height: 40px; padding: 0 8px; background-color: #fff; color: #000; -webkit-appearance: none; border: none; }
+@media screen and (max-width: 768px) { #search .cu-search input.form-text { font-size: 16px; } }
 #search .cu-search .form-submit { line-height: 40px; height: 40px; background: #cfb87c; color: #000; padding: 0 8px; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; border: none; -webkit-appearance: none; display: block; margin: 0; }
 
 #mobile-search { display: block; display: none; padding: 20px 20px; }
@@ -1008,13 +1009,11 @@ hr { margin: 0 0 20px 0; padding: 0; border: none; height: 1px; background: rgba
 .layout-responsive .menu-toggle button { background: none; border: none; padding: 0; }
 
 .layout-responsive .mobile-menu-toggle { display: block; position: absolute; right: 20px; text-transform: uppercase; font-size: 24px; font-family: Arial, Helvetica; }
-.layout-responsive .mobile-menu-toggle span.mobile-menu-text1 { position: absolute !important; clip: rect(1px 1px 1px 1px); /* IE6, IE7 */ clip: rect(1px, 1px, 1px, 1px); }
 @media screen and (min-width: 480px) { .layout-responsive .mobile-menu-toggle { font-size: 14px; }
-  .layout-responsive .mobile-menu-toggle span.mobile-menu-text1 { position: static !important; clip: auto; }
   .layout-responsive .mobile-menu-toggle button { padding: 2px 5px; display: inline-block; border-width: 1px; border-style: solid; white-space: nowrap; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; -webkit-background-clip: padding-box; -moz-background-clip: padding; background-clip: padding-box; } }
 @media screen and (min-width: 960px) { .layout-responsive .mobile-menu-toggle { display: none; } }
 
-@media screen and (max-width: 479px) { span.mobile-menu-text { border: 0; height: 1px; overflow: hidden; padding: 0; position: absolute !important; width: 1px; white-space: nowrap; clip: rect(1px 1px 1px 1px); clip: rect(1px, 1px, 1px, 1px); } }
+@media screen and (max-width: 479px) { .mobile-menu-toggle span.mobile-menu-text { border: 0; height: 1px; overflow: hidden; padding: 0; position: absolute !important; width: 1px; white-space: nowrap; clip: rect(1px 1px 1px 1px); clip: rect(1px, 1px, 1px, 1px); } }
 /* Menu visibility */
 .layout-responsive #secondary-menu-wrapper, .layout-responsive #main-menu-wrapper, .layout-responsive #footer-menu-wrapper { display: none; }
 @media (min-width: 960px) { .layout-responsive #secondary-menu-wrapper, .layout-responsive #main-menu-wrapper, .layout-responsive #footer-menu-wrapper { display: block; } }
