--- a/themes/ucb/scss/components/_search.scss
+++ b/themes/ucb/scss/components/_search.scss
@@ -94,8 +94,14 @@
       height:40px;
       padding:0 8px;
       background-color: #fff;
+      color:#000;
       -webkit-appearance: none;
       border:none;
+      @media screen and (max-width:768px) {
+        & {
+          font-size:16px;
+        }
+      }
     }
     .form-submit {
       line-height: 40px;
